Steps: final touch

--- a/src/styles/_global.sass
+++ b/src/styles/_global.sass
@@ -15,8 +15,12 @@ body
 	overflow-x: hidden
 
 a
-	color: $c-main
 	text-decoration: none
+
+	&:hover
+		color: white
+		text-decoration: none
+
 
 h1, h2, h3, h4, h5, h6
 	font-family: $font-family-head
