--- a/src/styles/comps/section.sass
+++ b/src/styles/comps/section.sass
@@ -26,6 +26,9 @@
 			font-size: 13px
 			line-height: 13px
 
+			a:hover
+				color: #337ab7
+
 		&-picture
 			$ratio: 120px
 			$halfRatio: ($ratio / 2)
@@ -77,6 +80,7 @@
 		font-size: 18px
 
 		&:hover
+			color: black
 			background: #f1f1f1
 
 			&::before
@@ -105,6 +109,7 @@
 				transition: 200ms
 				font-size: 14px
 				&:not(.active-item):hover
+					color: initial
 					opacity: .7
 				&.active-item
 					cursor: default
