--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -5,7 +5,7 @@ append vars
 
 block content
 	div.banner
-		a(href='/login-first.html').btn.view-envelope= 'Přihlásit se'
+		a(href='/login-first.html').btnCore.view-envelope= 'Přihlásit se'
 
 	div.section
 		div.section-in
