--- a/src/templates/layouts/section.pug
+++ b/src/templates/layouts/section.pug
@@ -17,7 +17,7 @@ block content
 
 				block sectionPicture
 
-			a(href="#").section-return.btn Zpět
+			a(href="#").section-return.btnCore Zpět
 
 			if sectionText
 				p.section-text= sectionText
