--- a/src/templates/login-email.pug
+++ b/src/templates/login-email.pug
@@ -27,5 +27,6 @@ block sectionContent
 				a(href="#").login-form-link= "Zapomenuté heslo"
 
 			.login-form-buttons
-				a(href="#").login-form-buttons-new= "Create new account"
 				input(type="submit", name="submit", id="submit", value="Login").login-form-buttons-submit
+				p.login-form-buttons-new-text New to Tripood?
+				a(href="/register.html").login-form-buttons-new= "Create new account"
