--- a/src/templates/movieholiday.pug
+++ b/src/templates/movieholiday.pug
@@ -33,4 +33,4 @@ block afterTrioContent
             |  Holiday route vidí pouze uživatelé s url odkazem
 
         .movieholiday-edit
-            a(href="").btn.movieholiday-edit-btn Editovat
+            a(href="").btnCore.movieholiday-edit-btn Editovat
