--- a/src/styles/parts/done.sass
+++ b/src/styles/parts/done.sass
@@ -19,6 +19,9 @@
       margin: 0
       line-height: 13px
 
+      &:hover
+        color: #337ab7
+
       &.view-strong
         font-weight: bold
         color: #265688
