--- a/src/templates/layouts/default.pug
+++ b/src/templates/layouts/default.pug
@@ -23,6 +23,8 @@ html(lang=manifest.lang)
 		script(src="https://use.fontawesome.com/54134a682d.js")
 
 		link(rel='stylesheet', href=`static/jquery-ui.min.css`, media='print')
+		link(rel='stylesheet', href=`https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css`)
+		link(rel='stylesheet', href=`https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.4/css/bootstrap-select.min.css`)
 		link(rel='stylesheet', href=`styles/${buildstamp}index.css`, media='screen')
 		link(rel='stylesheet', href=`styles/${buildstamp}print.css`, media='print')
 
@@ -39,7 +41,14 @@ html(lang=manifest.lang)
 
 		//- Application init
 		script(src='https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js', defer)
+		script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js', defer)
+		script(src='https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.4/js/bootstrap-select.min.js', defer)
 		script(src=`scripts/${buildstamp}index.js`, defer)
+
+		script.
+			$(document).ready(function () {
+				$('.selectpicker').selectpicker();
+			});
 
 	body.layout
 
