--- a/src/styles/parts/steps.sass
+++ b/src/styles/parts/steps.sass
@@ -92,7 +92,6 @@
         +size(43px)
         margin-right: 5px
         background-color: #4aa33f
-        justify-self: flex-end
         color: #fff
 
   &-current
@@ -112,6 +111,13 @@
 
     &-title
       padding-left: 10px
+
+    &-delete
+      +flex(center, center)
+      +size(43px)
+      background-color: red
+      justify-self: flex-end
+      color: #fff
 
   &-add
     +flex(center, center, column)
