--- a/src/styles/parts/views.sass
+++ b/src/styles/parts/views.sass
@@ -6,3 +6,19 @@
   background-color: rgb(74,163,63)
 .view-reactions
   background-color: rgb(203,174,69)
+.view-logout
+  background-color: rgb(46,46,42)
+
+.view
+  &-facebook
+    background-color: #0072b9
+  &-gmail
+    background-color: #cc0000
+  &-email
+    background-color: #999999
+  &-twitter
+    background-color: #00aced
+  &-vk
+    background-color: #4c75a3
+  &-linkedin
+    background-color: #007bb5
