--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -5,12 +5,16 @@ append vars
 
 block content
 	div.banner
-		a(href='/login-first.html').btnCore.view-envelope= 'Přihlásit se'
+		.banner-in
+			h1.banner-title Share your travel trip
+			p.banner-text Create roadtrip map, slideshow video from holiday free.
+
+			a(href='/login-first.html').btnCore.view-envelope.banner-btn ENTER
 
 	div.section
 		div.section-in
 			div.section-heading
-					h1.section-heading-title= "Nejnovější veřejná videa"
+					h1.section-heading-title Nejnovější veřejná videa
 
 
 
