--- a/src/templates/profile.pug
+++ b/src/templates/profile.pug
@@ -59,4 +59,13 @@ block otherContent
                 p.profile-option-info-text Zprávy videa ostatních lidí
         i(aria-hidden="true").fa.fa-arrow-circle-right.profile-option-next
 
+    a(href="/reactions.html").profile-option
+        .profile-option-wrap
+            .profile-option-img.view-logout
+                i(aria-hidden="true").fa.fa-power-off
+            .profile-option-info
+                h2.profile-option-info-title Logout
+                p.profile-option-info-text Odhlásit se z tohoto zařízení
+        i(aria-hidden="true").fa.fa-arrow-circle-right.profile-option-next
+
 
