--- a/src/styles/parts/banner.sass
+++ b/src/styles/parts/banner.sass
@@ -1,5 +1,29 @@
 .banner
 	+sizes(100%, 70vh)
 	+flex(center, center)
-	background-color: #999
+	background-image: url("/images/bg-homepage.jpg")
+	background-repeat: no-repeat
+	background-size: cover
+	background-position: center center
+	color: #fff
+	padding-top: 70px
+
+	&-in
+		text-align: center
+		max-width: 380px
+		margin: 0 auto 100px
+
+	&-title
+		font-size: 40px
+		font-weight: 900
+		text-transform: uppercase
+		margin: 0 0 20px
+
+	&-text
+		font-size: 18px
+		margin-bottom: 40px
+
+	&-btn
+		margin: 0 auto
+
 
