--- a/src/styles/parts/done.sass
+++ b/src/styles/parts/done.sass
@@ -7,6 +7,43 @@
     font-size: 14px
     border-top: 1px solid #f1f1f1
 
+    &-gallery
+      +flex(flex-start, center)
+      +size(100% 350px)
+
+      &-item
+        display: block
+        overflow: hidden
+        +relative()
+
+        &-img
+          min-height: 100%
+          min-width: 100%
+          +absolute(50% null null 50%)
+          transform: translate(-50%,-50%)
+
+        &.view-half
+          +size(50% 100%)
+        &.view-full
+          +size(100% 50%)
+
+        &-more
+          +size(100%)
+          +flex(center, center)
+          color: #fff
+
+          p
+            +relative
+            z-index: 2
+            margin: 0
+            font-size: 20px
+
+          &::before
+            content: ""
+            +size(100%)
+            background: rgba(#000, .7)
+            +absolute(0 null null 0)
+
     &-icon
       +size(35px)
       min-height: 35px
