Video step 1: add class view-fullfull

--- a/src/styles/parts/done.sass
+++ b/src/styles/parts/done.sass
@@ -26,6 +26,8 @@
           +size(50% 100%)
         &.view-full
           +size(100% 50%)
+        &.view-fullfull
+          +size(100%)
 
         &-more
           +size(100%)
