--- a/src/templates/login-first.pug
+++ b/src/templates/login-first.pug
@@ -24,3 +24,8 @@ block sectionContent
 			div.login-btn-method-icon
 				i(aria-hidden="true").fa.fa-envelope
 			p.login-btn-method-text= "Přihlásit se pomocí Emailu"
+
+		.login-form-buttons
+			.login-form-buttons-wrap
+				p.login-form-buttons-new-text New to Tripood?
+			a(href="/register.html").login-form-buttons-new= "Create new account"
