--- a/src/templates/movieholiday.pug
+++ b/src/templates/movieholiday.pug
@@ -32,5 +32,8 @@ block afterTrioContent
             |
             |  Holiday route vidí pouze uživatelé s url odkazem
 
-        .movieholiday-edit
-            a(href="").btnCore.movieholiday-edit-btn Editovat
+        .movieholiday-buttons
+            a(href="").movieholiday-edit Editovat
+            a(href="").movieholiday-share
+                i(aria-hidden="true").fa.fa-share
+                p.movieholiday-share-text Share
