--- a/src/styles/parts/banner.sass
+++ b/src/styles/parts/banner.sass
@@ -1,7 +1,7 @@
 .banner
 	+sizes(100%, 70vh)
 	+flex(center, center)
-	background-image: url("/images/bg-homepage.jpg")
+	background-image: url("../images/bg-homepage.jpg")
 	background-repeat: no-repeat
 	background-size: cover
 	background-position: center center
