--- a/src/styles/parts/done.sass
+++ b/src/styles/parts/done.sass
@@ -1,9 +1,9 @@
 .done
-  margin-top: 10px
+  margin-top: 5px
 
   &-item
     +flex(flex-start, center)
-    padding: 5px
+    padding: 5px 0
     font-size: 14px
     border-top: 1px solid #f1f1f1
 
