--- a/src/styles/parts/steps.sass
+++ b/src/styles/parts/steps.sass
@@ -95,11 +95,13 @@
         color: #fff
 
   &-current
+    +sticky(60px 0 null null)
     +flex(space-between, center)
     width: 100%
     color: #fff
     background-color: rgb(195,196,197)
     padding: 10px 15px
+    z-index: 10
 
     &-wrapper
       +flex(center, center)
@@ -114,7 +116,7 @@
 
     &-delete
       +flex(center, center)
-      +size(43px)
+      +size(29px)
       background-color: red
       justify-self: flex-end
       color: #fff
