--- a/src/templates/login-email.pug
+++ b/src/templates/login-email.pug
@@ -15,10 +15,14 @@ block sectionContent
 				label(for="username").login-form-label= "Login"
 				.login-form-input.view-username
 					input(type="text", name="username", id="username").login-form-input-in
+				p.error-message Špatné heslo
+
 			.login-form-wrap
 				label(for="password").login-form-label= "Password"
 				.login-form-input.view-password
 					input(type="password", name="password", id="password").login-form-input-in
+
+				p.error-message Špatné heslo
 
 			.login-form-backup
 				.login-form-backup-check
@@ -28,5 +32,3 @@ block sectionContent
 
 			.login-form-buttons
 				input(type="submit", name="submit", id="submit", value="Login").login-form-buttons-submit
-				p.login-form-buttons-new-text New to Tripood?
-				a(href="/register.html").login-form-buttons-new= "Create new account"
