--- a/src/templates/picture-detail.pug
+++ b/src/templates/picture-detail.pug
@@ -42,8 +42,8 @@ block content
                 .picDetail-options-person
                     .picDetail-options-person-text John Simons
 
-                    .picDetail-options-person-image
-                        img(src="https://picsum.photos/500/?random").picDetail-options-person-image-img
+                    .picDetail-options-person-font
+                        i(aria-hidden="true").fa.fa-user
 
             .picDetail-reactions-item
                 .picDetail-reactions-item-text Wou super zábavaaaa sdnasdnalsdn lasd nasdnlaksd lasknd
