--- a/src/styles/parts/picture-detail.sass
+++ b/src/styles/parts/picture-detail.sass
@@ -42,6 +42,16 @@
         overflow: hidden
         margin-left: 15px
 
+      &-font
+        +flex(center, center)
+        +size(50px)
+        border-radius: 50%
+        border: 3px solid lightgrey
+        color: lightgrey
+        overflow: hidden
+        margin-left: 15px
+        font-size: 28px
+
     &-links
       +flex(center, center)
 
