video speed setting - hidden input

--- a/src/templates/video-step2.pug
+++ b/src/templates/video-step2.pug
@@ -30,7 +30,7 @@ block sectionOuterContent
                 .steps-speed-icon
                     i(aria-hidden="true").fa.fa-wrench
 
-                p(id="slider-data" style="position: absolute; opacity: 0") 0
+                input(id="slider-data", type="hidden", value=40)
 
                 script.
                     initComponents.push({
