--- a/src/templates/profile.pug
+++ b/src/templates/profile.pug
@@ -15,7 +15,7 @@ block sectionContent
             p.profile-info-text Jmenuji se John Simon, velmi mnoho cestuji po celém světě. Kdyby jste potřebovali cokoliv vědět, rád pomohu. Můžeme připadně cestovat společně.
         .profile-info
             h3.profile-info-title Editovat profil:
-            a(href="#").btnCore.view-edit Editovat profil
+            a(href="/profile-edit.html").btnCore.view-edit Editovat profil
         .profile-info
             h3.profile-info-title Jazyk:
                 span.profile-info-span English Deutsch
