--- a/src/templates/video-step2.pug
+++ b/src/templates/video-step2.pug
@@ -41,20 +41,13 @@ block sectionOuterContent
                     })
 
         .steps-music
-            h2.steps-title Nahrát hudbu
-
-            .steps-music-wrap
-                select.steps-music-select
-                    option.steps-music-option Vybrat hudbu
-                    option.steps-music-option Kájá got
-                    option.steps-music-option Kájá got
-                a(href="").steps-music-button Nahrát
+            h2.steps-title Zvolit hudbu
 
             .steps-music-item
                 .steps-music-item-icon
                     i(aria-hidden="true").fa.fa-music
 
-                p.steps-music-item-text Hudba_název_song.mp3
+                p.steps-music-item-text No sound
 
 
     .steps-finishbox
