--- a/src/styles/parts/login.sass
+++ b/src/styles/parts/login.sass
@@ -57,7 +57,11 @@
 				max-width: 500px
 				border: 1px solid #f1f1f1
 				font-size: 16px
-				padding-left: 32px
+				padding-left: 40px
+
+				&.view-textarea
+					+sizes(100%, 80px)
+					padding-left: 10px
 
 			&.view-username::before
 				content: '\f007'
@@ -65,6 +69,8 @@
 				content: '\f13e'
 			&.view-envelope::before
 				content: "\f003"
+			&.view-web::before
+				content: "\f0c1"
 
 		&-backup
 			+flex(space-between, center)
