--- a/src/styles/parts/option.sass
+++ b/src/styles/parts/option.sass
@@ -22,6 +22,7 @@
       +size(100% 50px)
       border: 2px solid #f1f1f1
       padding: 0 100px 0 10px
+      background-color: #f1f5f8
 
       &.view-area
         +size(100% 150px)
@@ -46,12 +47,12 @@
       cursor: pointer
 
       &.view-info
-        background-color: #f1f1f1
-        color: black
+        background-color: #dce0e3
+        color: #353434
 
       &.view-delete
-        background-color: #dad9d8
-        color: red
+        background-color: #b6babd
+        color: #cd5d5c
 
       &.view-rewrite
         background-color: #4aa33f
@@ -100,10 +101,11 @@
       margin: 5px
       border: 1px solid #f1f1f1
       cursor: pointer
+      color: #a19f9f
 
       &.active
         color: black
-        border: 3px solid $c-main
+        border: 3px solid #125589
 
   &-stars
     +flex(center, center)
