--- a/src/styles/parts/steps.sass
+++ b/src/styles/parts/steps.sass
@@ -91,7 +91,7 @@
 
       &-add
         +flex(center, center)
-        +size(43px)
+        +size(37.5px 35px)
         margin-right: 5px
         background-color: #4aa33f
         color: #fff
@@ -99,10 +99,10 @@
   &-current
     +sticky(60px 0 null null)
     +flex(space-between, center)
-    width: 100%
+    +size(100% 50px)
     color: #fff
     background-color: rgb(195,196,197)
-    padding: 10px 15px
+    padding: 0 15px
     z-index: 10
 
     &-wrapper
@@ -118,7 +118,7 @@
 
     &-delete
       +flex(center, center)
-      +size(29px)
+      +size(35px)
       background-color: red
       justify-self: flex-end
       color: #fff
