--- a/src/templates/video-step1.pug
+++ b/src/templates/video-step1.pug
@@ -352,7 +352,7 @@ block sectionOuterContent
                         name: 'toggleClass',
                         place: '.option-add',
                         data: {
-                            trigger: '.option-add-arrow',
+                            trigger: '.option-add-wrap',
                             toggleClass: 'active'
                         }
                     })
