--- a/src/styles/parts/option.sass
+++ b/src/styles/parts/option.sass
@@ -162,6 +162,8 @@
       box-shadow: none
 
   &-add
+    border: 1px solid #f1f1f1
+    padding: 5px
 
     &.active &
       &-items-item
@@ -173,6 +175,7 @@
       +size(100% auto)
       +flex(flex-start, center)
       +relative()
+      cursor: pointer
 
     &-title
       font-size: 18px
